--- a/conference/templates/conference/signup.html
+++ b/conference/templates/conference/signup.html
@@ -13,8 +13,17 @@
   <div class="logo">Conf<span>2025</span></div>
   <nav class="nav-links" id="navLinks">
     <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'about' %}">About</a>
+    <a href="{% url 'contact' %}">Contact</a>
+    <a href="{% url 'itinerary' %}">itinerary</a>
     <a href="{% url 'submit' %}">Submit</a>
-    <a href="{% url 'signup' %}" class="active">Register</a>
+    {% if user.is_authenticated %}
+      <a href="{% url 'profile' %}">My Profile</a>
+      <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+      <a href="{% url 'signup' %}"class="active">Register</a>
+      <a href="{% url 'login' %}">Login</a>
+    {% endif %}
   </nav>
   <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 </header>
