--- a/conference/templates/conference/itinerary.html
+++ b/conference/templates/conference/itinerary.html
@@ -41,7 +41,7 @@
     <div class="container">
       <h2>Travel Itinerary</h2>
       <p>
-        The onward journey to the Bhutan International Conference 2025 begins on <strong>2nd September at 6 AM</strong> from <strong>New Cooch Behar (West Bengal)</strong>. All participants will travel together by bus to <strong>Thimphu/Paro, Bhutan</strong>. The travel experience will be coordinated and guided by <strong>Dr. Lhato Jamba</strong>. This shared journey is designed to offer participants a chance to connect even before the conference officially begins.<br><br>
+        The onward journey to the Bhutan International Conference 2025 begins on <strong>2nd September at 6 AM</strong> from <strong>New AlipurDuar (WB)</strong>. All participants will travel together by bus to <strong>Thimphu/Paro, Bhutan</strong>. The travel experience will be coordinated and guided by <strong>Dr. Lhato Jamba</strong>. This shared journey is designed to offer participants a chance to connect even before the conference officially begins.<br><br>
         The return journey is scheduled for <strong>6th September at 7 AM</strong>, departing from Bhutan and heading back to New Cooch Behar.
       </p>
     </div>
@@ -86,6 +86,17 @@
       <h3>Self-Mode Journey</h3>
       <p><strong>By Train:</strong> Reach <strong>New Alipurduar Jn. (WB)</strong> or <strong>New Cooch Behar (WB)</strong> on <strong>1st September 2025</strong>.</p>
       <p><strong>By Air:</strong> Land at <strong>Bagdogra Airport</strong> → Transfer to <strong>New AlipurDuar (WB)</strong> on <strong>1st September 2025</strong> & return from there.</p>
+    </div>
+    <div class="journey-box">
+      <p>Note: Offline Registration Fee includes Participation in Conference, Conference Kit, Traveling From New AlipurDuar
+ (West Bengal) to Conference Venue and Return, Sightseeing, fooding (MAP Plan), and lodging in Bhutan. 
+*BHUTAN ENTRY TAX SDF Charges may be waived off if the total participants is more than 50. If total offline
+ participants are less than 50, SDF Charges  (as applicable) shall be borne by the Participants at the time of entry in Bhutan. *
+ Accompanying person, if any, needs to register separately at the rate of Rs15000/- (For Indian/Bhutan Nationals) and US$ $
+ 250 (For Foreign Nationals). 
+Date of Journey from New AlipurDuar (West Bengal) to Bhutan: 2nd September 2025, 6 am, Return reach New AlipurDuar
+ (West Bengal) from Bhutan on 6th September, 2025, by evening. Dr Lhato Jamba, Local Organising Secretary, shall receive
+ the participant and act as a guide for transportation to Bhutan.</p>
     </div>
 
     <div class="journey-note">
