--- a/conference/templates/conference/contact.html
+++ b/conference/templates/conference/contact.html
@@ -32,7 +32,7 @@
     <h2>Contact Information</h2>
 
     <section class="contact-section">
-      <h3>Conference Coordinators</h3>
+      <h3>Conference Convenors </h3>
       <ul>
         <li><strong>Dr. Nilanjana Chakrabarty</strong><br>
           📞 +91 94353 79955<br>
