--- a/conference/templates/conference/login.html
+++ b/conference/templates/conference/login.html
@@ -66,7 +66,7 @@
       <p class="form-note">Forgot your password? <a href="{% url 'password_reset' %}">Reset here</a></p>
       <p class="form-note">
         Don't have an account?
-        <a href="{% url 'home' %}">Please sign up from homepage</a>
+        <a href="{% url 'home' %}">Please register from homepage</a>
       </p>
     </form>
   </main>
