--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -37,6 +37,7 @@
     <p class="collab">In academic partnership with</p>
     <p> Royal Thimpu College<br>Bhutan</p>
     <p class="date">03 -06 September, 2025</p>
+    <p class="date">Venue: Royal Timphu College, Bhutan</p>
 
     <div class="countdown" id="countdown">
       <div><span id="days">00</span><small>Days</small></div>
