--- a/conference/templates/conference/itinerary.html
+++ b/conference/templates/conference/itinerary.html
@@ -68,6 +68,7 @@
         <div class="sight-card"><img src="{% static 'images/buddha-point.jpg' %}" alt="Buddha Dordenma"><p>Buddha Dordenma Statue</p></div>
         <div class="sight-card"><img src="{% static 'images/punakha-dzong.jpg' %}" alt="Punakha Dzong"><p>Punakha Dzong</p></div>
         <div class="sight-card"><img src="{% static 'images/paro-market.jpg' %}" alt="Paro Market"><p>Local Bhutanese Market</p></div>
+        <p>Sightseeing Places may be subject to last minute change based on recommendation of Local Organising secretary</p>
       </div>
     </div>
   </section>
