--- a/conference/templates/conference/itinerary.html
+++ b/conference/templates/conference/itinerary.html
@@ -42,7 +42,7 @@
       <h2>Travel Itinerary</h2>
       <p>
         The onward journey to the Bhutan International Conference 2025 begins on <strong>2nd September at 6 AM</strong> from <strong>New AlipurDuar (WB)</strong>. All participants will travel together by bus to <strong>Thimphu/Paro, Bhutan</strong>. The travel experience will be coordinated and guided by <strong>Dr. Lhato Jamba</strong>. This shared journey is designed to offer participants a chance to connect even before the conference officially begins.<br><br>
-        The return journey is scheduled for <strong>6th September at 7 AM</strong>, departing from Bhutan and heading back to New Cooch Behar.
+        The return journey is scheduled for <strong>6th September at 7 AM</strong>, departing from Bhutan and heading back to New AlipurDuar (WB).
       </p>
     </div>
   </section>
