--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -19,6 +19,7 @@
     <li><a href="{% url 'contact' %}">Contact</a></li>
     <li><a href="{% url 'itinerary' %}">Itinerary</a></li>    
     <li><a href="{% url 'submit' %}">Submit</a></li>
+    <li><a href="{% url 'pricing' %}">Pricing</a></li>
     {% if user.is_authenticated %}
       <li><a href="{% url 'profile' %}">My Profile</a></li>
       <li><a href="{% url 'logout' %}">Logout</a></li>
