--- a/conference/templates/conference/abstract_approved.html
+++ b/conference/templates/conference/abstract_approved.html
@@ -2,11 +2,6 @@
 <html>
   <body style="font-family:Arial, sans-serif; color:#333;">
     <p>Dear {{ author_name }},</p>
-
-    <p>
-      We are pleased to inform you that your abstract has been <strong>approved</strong> for IBSSC 2025.
-    </p>
-
     <p><strong>Paper Title:</strong> {{ title }}</p>
     <p><strong>Paper ID:</strong> {{ paper_id }}</p>
     <p><strong>Affiliation:</strong> {{ affiliation }}</p>
@@ -19,7 +14,14 @@
       {% endfor %}
     </ul>
     {% endif %}
+    <p>
+It gives us immense pleasure to inform you that the Research Paper Scrutiny Committee has accepted the abstract of your research paper with ID IBSSC10041, entitled “Dfydhfh”, to be presented in the “Indo Bhutan Social Science Conference” organised by the Department of Business Administration, Assam University, to be held at Royal Thimphu College, Bhutan, from 3rd September 2025 to 6th September 2025.
 
+You are further requested to submit the full-length paper and complete the registration process on or before 10th August 2025.
+
+Note: If there are multiple authors in the paper, each author's paymentis to be made by the registered person to receive a certificate.
+
+    </p>
     <p>
       👉 Join our official WhatsApp group for updates:  
       <a href="https://chat.whatsapp.com/CPEaa6ek2ur0q6vL7nHJGT">
