--- a/conference/templates/conference/abstract_approved.html
+++ b/conference/templates/conference/abstract_approved.html
@@ -15,7 +15,7 @@
     </ul>
     {% endif %}
     <p>
-It gives us immense pleasure to inform you that the Research Paper Scrutiny Committee has accepted the abstract of your research paper with ID IBSSC10041, entitled “{{ paper_id }}”, to be presented in the “Indo Bhutan Social Science Conference” organised by the Department of Business Administration, Assam University, to be held at Royal Thimphu College, Bhutan, from 3rd September 2025 to 6th September 2025.
+It gives us immense pleasure to inform you that the Research Paper Scrutiny Committee has accepted the abstract of your research paper with ID IBSSC10041, entitled “{{ title }}”, to be presented in the “Indo Bhutan Social Science Conference” organised by the Department of Business Administration, Assam University, to be held at Royal Thimphu College, Bhutan, from 3rd September 2025 to 6th September 2025.
 
 You are further requested to submit the full-length paper and complete the registration process on or before 10th August 2025.
 
